--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "installDependencies": true,
   "stackblitz": {
-    "startCommand": "npm start"
+    "startCommand": "stackblitzScript"
   }
 }
