--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "David Rasmussen",
   "installDependencies": true,
   "stackblitz": {
-    "startCommand": "./stackblitzScript.sh"
+    "startCommand": "chmod +x stackblitzScript.sh : ./stackblitzScript.sh"
   }
 }
